# visionAgent_v2

./: .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/visionagent-service/: run
skills/: firefox.md  thunderbird.md
src/: main.py
src/agents/: search_graph.py  task_router.py  vision_graph.py
src/agents/template/: prompts.py  schema.py
src/config/: settings.py
src/core/: registry.py  search_graph.py
src/interface/: app.py  stream_handler.py
src/interface/tray/: script.js  style.css  tray_app.py  tray_index.html
src/interface/web/: app.py  index.html  script.js  style.css
src/io/: capture.py  controller.py
src/io/llm/: client.py
src/io/vision/: omniparser.py  yolo_client.py  yolo_local.py
src/io/vlm/: client.py  omniparser.py  preprocess.py  yolo.py
src/retrieval/: file_loader.py  hierarchical_indexer.py  indexer.py  skill_manager.py  web_search.py
src/tools/: general_tools.py  program_tools.py  retrieval_tools.py  ui_tools.py
tests/: test_retrieval_mcp.py  test_searchAgent.py  test_vnc_program_ui.py
vision_server/: yolo_script.py  yolo_server.py
